--- a/assembl/static/css/components/_panel.scss
+++ b/assembl/static/css/components/_panel.scss
@@ -224,7 +224,7 @@
 }
 
 .panel-body--has-footer {
-  bottom: 36px;
+  bottom: 36px !important;
 }
 
 // dropzone above the panel-body
