--- a/assembl/static/css/components/_title.scss
+++ b/assembl/static/css/components/_title.scss
@@ -3,6 +3,3 @@
 // h1, h2, h3, h4, h5, h6 { margin: 0 0 1em 0; }
 // 
 
-.title-debatname {
-  font-size: 16px;
-}
